Update application files

--- a/public/index.html
+++ b/public/index.html
@@ -311,6 +311,93 @@
       </div>
     </div>
 
+    <div class="font-size-section card">
+      <div class="card-header">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M4 7V4h16v3M9 20h6M12 4v16"/>
+        </svg>
+        <h2>Font Size</h2>
+      </div>
+      <div class="font-size-grid">
+        <label class="font-size-option">
+          <input type="radio" name="fontSize" value="16">
+          <div class="font-size-card">
+            <div class="font-size-preview">
+              <span style="font-size: 14px;">Aa</span>
+            </div>
+            <div class="font-size-name">Small</div>
+            <div class="font-size-desc">16px</div>
+          </div>
+        </label>
+
+        <label class="font-size-option">
+          <input type="radio" name="fontSize" value="24" checked>
+          <div class="font-size-card">
+            <div class="font-size-preview">
+              <span style="font-size: 20px;">Aa</span>
+            </div>
+            <div class="font-size-name">Medium</div>
+            <div class="font-size-desc">24px</div>
+          </div>
+        </label>
+
+        <label class="font-size-option">
+          <input type="radio" name="fontSize" value="32">
+          <div class="font-size-card">
+            <div class="font-size-preview">
+              <span style="font-size: 26px;">Aa</span>
+            </div>
+            <div class="font-size-name">Large</div>
+            <div class="font-size-desc">32px</div>
+          </div>
+        </label>
+
+        <label class="font-size-option">
+          <input type="radio" name="fontSize" value="40">
+          <div class="font-size-card">
+            <div class="font-size-preview">
+              <span style="font-size: 32px;">Aa</span>
+            </div>
+            <div class="font-size-name">Extra Large</div>
+            <div class="font-size-desc">40px</div>
+          </div>
+        </label>
+
+        <label class="font-size-option">
+          <input type="radio" name="fontSize" value="48">
+          <div class="font-size-card">
+            <div class="font-size-preview">
+              <span style="font-size: 36px;">Aa</span>
+            </div>
+            <div class="font-size-name">Huge</div>
+            <div class="font-size-desc">48px</div>
+          </div>
+        </label>
+
+        <label class="font-size-option">
+          <input type="radio" name="fontSize" value="64">
+          <div class="font-size-card">
+            <div class="font-size-preview">
+              <span style="font-size: 42px;">Aa</span>
+            </div>
+            <div class="font-size-name">Giant</div>
+            <div class="font-size-desc">64px</div>
+          </div>
+        </label>
+
+        <label class="font-size-option">
+          <input type="radio" name="fontSize" value="custom">
+          <div class="font-size-card custom-size-card">
+            <div class="font-size-preview">
+              <input type="number" id="customFontSize" min="8" max="108" value="72" placeholder="px">
+            </div>
+            <div class="font-size-name">Custom</div>
+            <div class="font-size-desc">8-108px</div>
+          </div>
+        </label>
+      </div>
+    </div>
+
     <div class="color-section card">
       <div class="card-header">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
