Update animation features and dependencies - improved stability and UI enhancements (exclude .env)

--- a/public/index.html
+++ b/public/index.html
@@ -864,6 +864,17 @@
             <div class="animation-desc">Progressive color</div>
           </div>
         </label>
+
+        <label class="animation-option">
+          <input type="radio" name="animation" value="word-color">
+          <div class="animation-card">
+            <div class="animation-preview">
+              <span class="anim-word-color">Hello <span style="color: #FFD700;">World</span></span>
+            </div>
+            <div class="animation-name">Word Color</div>
+            <div class="animation-desc">Current word changes color</div>
+          </div>
+        </label>
       </div>
     </div>
 
