Update animation features and dependencies - improved stability and UI enhancements (exclude .env)

--- a/public/index.html
+++ b/public/index.html
@@ -875,6 +875,29 @@
             <div class="animation-desc">Current word changes color</div>
           </div>
         </label>
+
+        <label class="animation-option">
+          <input type="radio" name="animation" value="word-reveal">
+          <div class="animation-card">
+            <div class="animation-preview">
+              <span class="anim-word-reveal">Hello World...</span>
+            </div>
+            <div class="animation-name">Word Reveal</div>
+            <div class="animation-desc">Words appear one by one</div>
+          </div>
+        </label>
+
+        <label class="animation-option">
+          <input type="radio" name="animation" value="stroke">
+          <div class="animation-card">
+            <div class="animation-preview">
+              <span class="anim-stroke" style="-webkit-text-stroke: 1px white; color: transparent;">Hello</span>
+              <span style="color: #FFD700;"> World</span>
+            </div>
+            <div class="animation-name">Stroke</div>
+            <div class="animation-desc">Outline fills with color</div>
+          </div>
+        </label>
       </div>
     </div>
 
