Update animation features and dependencies - improved stability and UI enhancements (exclude .env)

--- a/public/index.html
+++ b/public/index.html
@@ -1031,6 +1031,22 @@
             <div class="animation-desc">Digital distortion effect</div>
           </div>
         </label>
+
+        <label class="animation-option">
+          <input type="radio" name="animation" value="3d-extrude">
+          <div class="animation-card">
+            <div class="animation-preview">
+              <span style="position: relative; font-weight: bold;">
+                <span style="color: #333; position: absolute; left: 3px; top: 3px;">3D</span>
+                <span style="color: #555; position: absolute; left: 2px; top: 2px;">3D</span>
+                <span style="color: #777; position: absolute; left: 1px; top: 1px;">3D</span>
+                <span style="color: #FFD700;">3D</span>
+              </span>
+            </div>
+            <div class="animation-name">3D Extrude</div>
+            <div class="animation-desc">3D depth effect</div>
+          </div>
+        </label>
       </div>
     </div>
 
