Update animation features and dependencies - improved stability and UI enhancements (exclude .env)

--- a/public/index.html
+++ b/public/index.html
@@ -1047,6 +1047,17 @@
             <div class="animation-desc">3D depth effect</div>
           </div>
         </label>
+
+        <label class="animation-option">
+          <input type="radio" name="animation" value="retro-wave">
+          <div class="animation-card">
+            <div class="animation-preview">
+              <span style="font-weight: bold; color: #ff00ff; text-shadow: 0 0 5px #ff00ff, 0 0 10px #00ffff, 2px 2px 0 #00ffff;">RETRO</span>
+            </div>
+            <div class="animation-name">Retro Wave</div>
+            <div class="animation-desc">80s neon synthwave</div>
+          </div>
+        </label>
       </div>
     </div>
 
